--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 
 <body>
-	<section class="bg-color-blue banner">
+	<section class="bg-color-grey banner">
 		<div class="container">
 			<div class="row">
 				<div class="col"></div>
-				<div class="col is-9">
+				<div class="col is-3">
 					<img class="profile-pic" src="DJ Strader - Color.jpg" alt="Profile Picture">
 				</div>
 				<div class="col"></div>
