--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
-						<img src="assets/icon-phone.svg" alt="Phone Icon"">
+						<img src="smartphone-call.svg" alt="Phone Icon"">
 					</div>
 					<div class="col is-8">
 						<p class="text-detail">(410) 459 2789</p>
