--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
-						<img src="assets/icon-email.svg" alt="Email Icon"">
+						<img src="e-mail-envelope.svg" alt="Email Icon"">
 					</div>
 					<div class="col is-8">
 						<p class="text-detail">dj@gosolo.io</p>
@@ -77,7 +77,7 @@
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
-						<img src="assets/icon-website.svg" alt="Website Icon"">
+						<img src="global.svg" alt="Website Icon"">
 					</div>
 					<div class="col is-8">
 						<p class="text-detail">gosolo.io</p>
@@ -95,7 +95,7 @@
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
-						<img src="assets/icon-address.svg" alt="Address Icon"">
+						<img src="placeholder.svg" alt="Address Icon"">
 					</div>
 					<div class="col is-8">
 						<p class="text-detail">3401 N Thanksgiving Way, Lehi, UT 84043</p>
