--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
-						<img src="icons8-website-100.png" alt="Website Icon"">
+						<img src="placeholder-filled-tool-shape-for-maps.png" alt="Website Icon"">
 					</div>
 					<div class="col is-8">
 						<p class="text-detail">gosolo.io</p>
@@ -95,7 +95,7 @@
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
-						<img src="placeholder.svg" alt="Address Icon"">
+						<img src="placeholder-filled-tool-shape-for-maps.svg" alt="Address Icon"">
 					</div>
 					<div class="col is-8">
 						<p class="text-detail">3401 N Thanksgiving Way, Lehi, UT 84043</p>
