--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
-						<img src="placeholder-filled-tool-shape-for-maps.svg" alt="Address Icon"">
+						<img src="assets/icon-address.svg" alt="Address Icon"">
 					</div>
 					<div class="col is-8">
 						<p class="text-detail">3401 N Thanksgiving Way, Lehi, UT 84043</p>
