--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
-						<img src="placeholder-filled-tool-shape-for-maps.png" alt="Website Icon"">
+						<img src="assets/icon-website.svg" alt="Website Icon"">
 					</div>
 					<div class="col is-8">
 						<p class="text-detail">gosolo.io</p>
